# PPN-microbench

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run
.github/workflows/: ci_pipeline.yml
include/PPN-microbench/: abstract_ops.hpp  asm_functions.hpp  awesome_header.hpp  cache_latency.hpp  conductor.hpp  constants.hpp  context.hpp  core_to_core_frequency.hpp  core_to_core_latency.hpp  cpu_frequency.hpp  cpu_speed.hpp  driver.hpp  flops.hpp  gpu_bandwidth.hpp  gpu_h2d_bandwidth.hpp  intrinsics.h  intrinsics.hpp  iops.hpp  load_test.hpp  matmul_bench.hpp  matrix_bench.hpp  mem_bandwidth.hpp  memory.hpp  microbench.hpp  ops.hpp  stream.hpp  test_class.hpp
include/PPN-microbench/_ops/: ops.hpp
include/PPN-microbench/ops/: abstract_ops.hpp  flops.hpp  iops.hpp
main/: CMakeLists.txt  conductor_main.cpp  main.cpp
report/: main.py  out.json  requirements.txt
report/elements/: base.py
report/elements/bench/: __init__.py  base.py  cache_latency.py  core_to_core_latency.py  cpu_frequency.py  gpu_bandwidth.py  gpu_h2d_bandwidth.py  load_test.py  matrix_bench.py  mem_bandwidth.py  memory.py  ops.py  stream.py
report/elements/styles/: styles.css
src/PPN-microbench/: CMakeLists.txt  abstract_ops.cpp  awesome_func.cpp  cache_latency.cpp  conductor.cpp  context.cpp  core_to_core_frequency.cpp  core_to_core_latency.cpp  cpu_frequency.cpp  cpu_speed.cpp  driver.cpp  flops.cpp  gpu_bandwidth.cpp  gpu_h2d_bandwidth.cpp  iops.cpp  load_test.cpp  matmul_bench.cpp  matrix_bench.cpp  mem_bandwidth.cpp  memory.cpp  microbench.cpp  ops.cpp  stream.cpp  test_class.cpp
src/PPN-microbench/_ops/: ops.cpp
src/PPN-microbench/asm/: add_arm.S  add_x86.S  cpu_frequency_arm_64.S  cpu_frequency_arm_64.s  cpu_frequency_x86_64.S  cpu_frequency_x86_64.s  fma_arm.S  fma_x86.S
src/PPN-microbench/gpu/: CMakeLists.txt  gpu_bandwidth.cpp
src/PPN-microbench/ops/: abstract_ops.cpp  flops.cpp  iops.cpp
